Thu Aug  4 15:44:10 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/rbinstall.rb (Gem::Specification): may not be defined when
	  cross-compiling and BASERUBY is 1.8.

Thu Aug  4 11:30:36 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* include/ruby/missing.h: define __syscall on OpenBSD as r32702.

Thu Aug  4 03:02:54 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* tool/rbinstall.rb: use rubygems to load gemspecs, copy actual
	  gemspecs on install rather than generate fake ones for all gems.

Thu Aug  4 02:45:10 2011  Kenta Murata  <mrkn@mrkn.jp>

	* configure.in: set CXX variable to the C++ compiler that matches the
	  C compiler specified by CC variable (e.g. use g++-4.2 for gcc-4.2).

Thu Aug  4 02:21:10 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (link_command): use static library only for bundled
	  extensions.  [Bug #5147]

Thu Aug  4 02:02:10 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/psych.gemspec: installing psych as a gem.

Wed Aug  3 16:01:35 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* util.c, include/ruby/util.h (ruby_add_suffix): remove the function.
	  [Bug #5153] [ruby-core:38736]

	* io.c (argf_next_argv): remove the call of above function.

	* ext/-test-/add_suffix, test/-ext-/test_add_suffix.rb: remove the test
	  extension module because this is only for testsing ruby_add_suffix().

	* LEGAL: remove the mention about a part of util.c, because now we
	  removed the part.

	* io.c (argf_next_argv): now the new filename is not guranteed to
	  use, so should check the return value of rename(2).

	* test/ruby/test_argf.rb (TestArgf#test_inplace_rename_impossible):
	  now we expect same result with other platforms on no_safe_rename
	  platforms (=Windows).

Wed Aug  3 09:18:08 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* test/xmlrpc/webrick_testing.rb (WEBrick_Testing#start_server):
	  Like r32795, bind address should be specified.
