@@ -3,6 +3,3 @@ rake		lib/rake/version.rb		[rake]
 rdoc		lib/rdoc.rb			[rdoc ri]
 minitest	lib/minitest/unit.rb
 json		ext/json/lib/json/version.rb
-io-console	ext/io/console/io-console.gemspec
-bigdecimal	ext/bigdecimal/bigdecimal.gemspec
-psych		ext/psych/psych.gemspec
